--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,25 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="TextStandard">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="fontFamily">@font/catamaran_regular</item>
+    </style>
+
+    <style name="TextHeader" parent="TextStandard">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">32dp</item>
+        <item name="fontFamily">@font/catamaran_bold</item>
+    </style>
+
+    <style name="ButtonStandard" parent="TextStandard">
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/catamaran_bold</item>
+    </style>
 </resources>
