--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,28 @@
     tools:context=".views.MainActivity">
 
     <fragment
+        android:id="@+id/main_profile_info_fragment"
+        android:name="com.aoinc.w3d3_class_networkcalls.views.ProfileInfoFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/main_repos_list_fragment"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout="@layout/profile_fragment_layout"
+        app:layout_constraintVertical_weight=".3"/>
+
+    <fragment
         android:id="@+id/main_repos_list_fragment"
         android:name="com.aoinc.w3d3_class_networkcalls.views.RepoListFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/repo_list_fragment" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/main_profile_info_fragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout="@layout/repo_list_fragment"
+        app:layout_constraintVertical_weight=".7"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
