--- a/app/src/main/res/layout/repo_list_fragment.xml
+++ b/app/src/main/res/layout/repo_list_fragment.xml
@@ -5,24 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/repos_profile_pic"
-        android:layout_width="match_parent"
-        android:layout_height="192dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_baseline_person_24"
-        tools:src="@tools:sample/avatars" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/repos_list_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/repos_profile_pic"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="match_parent"
         tools:listitem="@layout/repo_item_layout"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
