--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,4 +34,11 @@
         <item name="android:textColor">@color/white</item>
         <item name="fontFamily">@font/catamaran_bold</item>
     </style>
+
+    <style name="imageViewStandard">
+<!--        <item name="android:layout_marginLeft">16dp</item>-->
+<!--        <item name="android:layout_marginRight">16dp</item>-->
+        <item name="android:layout_marginTop">16dp</item>
+<!--        <item name="android:layout_marginBottom">16dp</item>-->
+    </style>
 </resources>
